Added project page. Edited css table

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Kos Webpage</title>
+    <title>Kos: Webpage</title>
     <link rel="stylesheet" href="kos_style.css">
   </head>
   <body>
     <div class="side_bar_kos">
-      <h5>M E N U</h5>
+      <h4>M E N U</h4>
       <a href="#">Main Page</a>
-      <a href="#">Project</a>
-      <a href="#">Background</a>
+      <a href="./projects.html">Project</a>
+      <a href="./background.html">Background</a>
       <a href="#">CS50</a>
     </div>
     <div class="" id="main_frame_kos">
