*Added "background" page. *Index page - added footer *CSS update

--- a/background.html
+++ b/background.html
@@ -2,15 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Kos: my projects</title>
+    <title>Kos: my background</title>
     <link rel="stylesheet" href="kos_style.css">
   </head>
   <body>
     <div class="side_bar_kos">
       <h4>M E N U</h4>
       <a href="./index.html">Main Page</a>
-      <a href="#">Project</a>
-      <a href="./background.html">Background</a>
+      <a href="./projects.html">Project</a>
+      <a href="#">Background</a>
       <a href="#">CS50</a>
     </div>
     <div id="main_frame_kos" class="">
