--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
         Сразу обратите внимание, что если вам нужен простой функционал, такой как перменные, то в простом CSS они уже появились и не нужно загружать себя таким инструментом как Sass. Вот статья — Руководство по работе с переменными в CSS
         Мой Твиттер — там много из мира фронтенда, да и вообще поговорим🖖. Подписывайтесь, будет интересно: )</p>
       </div>
-      <div class="footer_info_kos">
-        Some footer
-      </div>
     </div>
+    <footer>
+      <p class="footer_info_kos">
+        ElectroKos for CS50 HarvardX
+      </p>
+    </footer>
   </body>
 </html>
