*Added page CS50 *NOT Good CSS!!!

--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
       <a href="./index.html">Main Page</a>
       <a href="#">Project</a>
       <a href="./background.html">Background</a>
-      <a href="#">CS50</a>
+      <a href="./objecives.html">CS50</a>
     </div>
     <div id="main_frame_kos" class="">
 
