--- a/index.html
+++ b/index.html
@@ -8,20 +8,25 @@
   <body>
     <div class="side_bar_kos">
       <h4>M E N U</h4>
-      <a href="#">Main Page</a>
-      <a href="./projects.html">Project</a>
-      <a href="./background.html">Background</a>
-      <a href="#">CS50</a>
+      <a class="big_screen_kos" href="#">Main Page</a>
+      <a class="big_screen_kos" href="./projects.html">Project</a>
+      <a class="big_screen_kos" href="./background.html">Background</a>
+      <a class="big_screen_kos" href="./objecives.html">CS50</a>
+      <a class="small_screen_kos" href="#">1</a>
+      <a class="small_screen_kos" href="./projects.html">2</a>
+      <a class="small_screen_kos" href="./background.html">3</a>
+      <a class="small_screen_kos" href="./objecives.html">4</a>
+      <p>HI</p>
     </div>
     <div class="" id="main_frame_kos">
       <div class="header_kos">
         <h3>Main Page!</h3>
       </div>
       <div class="main_data_kos">
-        <p>расширение CSS, которое придаёт мощи и элегантности этому простому языку. Sass даст вам возможность использовать переменные, вложенные правила, миксины, инлайновые импорты и многое другое, всё с полностью совместимым с CSS синтаксисом. Sass помогает сохранять огромные таблицы стилей хорошо организованными, а небольшим стилям работать быстро, особенно с помощью библиотеки стилей Compass.
-        Суть этой статьи в том, чтобы дать понять как работает Sass в разных кейсах и именно самому решить для себя нужен ли он вам.
-        Сразу обратите внимание, что если вам нужен простой функционал, такой как перменные, то в простом CSS они уже появились и не нужно загружать себя таким инструментом как Sass. Вот статья — Руководство по работе с переменными в CSS
-        Мой Твиттер — там много из мира фронтенда, да и вообще поговорим🖖. Подписывайтесь, будет интересно: )</p>
+        <p>Kos P. on the line! Here is site about some my Projects, some my skills. So... This about myself. Egocentric site ;) </p>
+        <p>Hope you will find it usefull.</p>
+        <p>Basicly this site just a project in scope of CS50 course</p>
+        <p>One of my work you can find at <a href="http://ElectroKos.ru">ElectroKos.Ru</a></p>
       </div>
     </div>
     <footer>
