--- a/objecives.html
+++ b/objecives.html
@@ -2,19 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Kos: my background</title>
     <link rel="stylesheet" href="kos_style.css">
+    <title>Kos: CS50</title>
   </head>
   <body>
     <div class="side_bar_kos">
       <h4>M E N U</h4>
       <a href="./index.html">Main Page</a>
       <a href="./projects.html">Project</a>
-      <a href="#">Background</a>
-      <a href="./objecives.html">CS50</a>
+      <a href="./background.html">Background</a>
+      <a href="#">CS50</a>
     </div>
-    <div id="main_frame_kos" class="">
 
-    </div>
   </body>
 </html>
