--- a/objecives.html
+++ b/objecives.html
@@ -8,10 +8,14 @@
   <body>
     <div class="side_bar_kos">
       <h4>M E N U</h4>
-      <a href="./index.html">Main Page</a>
-      <a href="./projects.html">Project</a>
-      <a href="./background.html">Background</a>
-      <a href="#">CS50</a>
+      <a class="big_screen_kos" href="./index.html">Main Page</a>
+      <a class="big_screen_kos" href="./projects.html">Project</a>
+      <a class="big_screen_kos" href="./background.html">Background</a>
+      <a class="big_screen_kos" href="#">CS50</a>
+      <a class="small_screen_kos" href="#">1</a>
+      <a class="small_screen_kos" href="./projects.html">2</a>
+      <a class="small_screen_kos" href="./background.html">3</a>
+      <a class="small_screen_kos" href="./objecives.html">4</a>
     </div>
 
   </body>
