--- a/projects.html
+++ b/projects.html
@@ -8,13 +8,17 @@
   <body>
     <div class="side_bar_kos">
       <h4>M E N U</h4>
-      <a href="./index.html">Main Page</a>
-      <a href="#">Project</a>
-      <a href="./background.html">Background</a>
-      <a href="./objecives.html">CS50</a>
+      <a class="big_screen_kos" href="./index.html">Main Page</a>
+      <a class="big_screen_kos" href="#">Project</a>
+      <a class="big_screen_kos" href="./background.html">Background</a>
+      <a class="big_screen_kos" href="./objecives.html">CS50</a>
+      <a class="small_screen_kos" href="#">1</a>
+      <a class="small_screen_kos" href="./projects.html">2</a>
+      <a class="small_screen_kos" href="./background.html">3</a>
+      <a class="small_screen_kos" href="./objecives.html">4</a>
     </div>
     <div id="main_frame_kos" class="">
-
+      <p>Finished story</p>
     </div>
   </body>
 </html>
