All requirements done

--- a/background.html
+++ b/background.html
@@ -12,13 +12,14 @@
       <a class="big_screen_kos" href="./projects.html">Project</a>
       <a class="big_screen_kos" href="#">Background</a>
       <a class="big_screen_kos" href="./objecives.html">CS50</a>
-      <a class="small_screen_kos" href="#">1</a>
-      <a class="small_screen_kos" href="./projects.html">2</a>
-      <a class="small_screen_kos" href="./background.html">3</a>
-      <a class="small_screen_kos" href="./objecives.html">4</a>
+      <a class="small_screen_kos" href="./index.html">&#9874;</a>
+      <a class="small_screen_kos" href="./projects.html">&#128526;</a>
+      <a class="small_screen_kos" href="#">&#128366;</a>
+      <a class="small_screen_kos" href="./objecives.html">&#128387;</a>
     </div>
     <div id="main_frame_kos" class="">
-      <p>Here about my shouse</p>
+      <p>I am a graduate of the Siberian Federal University.
+Specialty - electric drive and automation.</p>
     </div>
   </body>
 </html>
