--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <a class="big_screen_kos" href="./projects.html">Project</a>
       <a class="big_screen_kos" href="./background.html">Background</a>
       <a class="big_screen_kos" href="./objecives.html">CS50</a>
-      <a class="small_screen_kos" href="#">1</a>
-      <a class="small_screen_kos" href="./projects.html">2</a>
-      <a class="small_screen_kos" href="./background.html">3</a>
-      <a class="small_screen_kos" href="./objecives.html">4</a>
+      <a class="small_screen_kos" href="#">&#9874;</a>
+      <a class="small_screen_kos" href="./projects.html">&#128526;</a>
+      <a class="small_screen_kos" href="./background.html">&#128366;</a>
+      <a class="small_screen_kos" href="./objecives.html">&#128387;</a>
     </div>
     <div class="" id="main_frame_kos">
       <div class="header_kos">
