--- a/objecives.html
+++ b/objecives.html
@@ -12,11 +12,13 @@
       <a class="big_screen_kos" href="./projects.html">Project</a>
       <a class="big_screen_kos" href="./background.html">Background</a>
       <a class="big_screen_kos" href="#">CS50</a>
-      <a class="small_screen_kos" href="#">1</a>
-      <a class="small_screen_kos" href="./projects.html">2</a>
-      <a class="small_screen_kos" href="./background.html">3</a>
-      <a class="small_screen_kos" href="./objecives.html">4</a>
+      <a class="small_screen_kos" href="./index.html">&#9874;</a>
+      <a class="small_screen_kos" href="./projects.html">&#128526;</a>
+      <a class="small_screen_kos" href="./background.html">&#128366;</a>
+      <a class="small_screen_kos" href=".#">&#128387;</a>
     </div>
-
+    <div id="main_frame_kos" class="">
+      <p>I will finish HarvardX CS50 to strengthen knowledge and receive certification.</p>
+    </div>
   </body>
 </html>
