--- a/projects.html
+++ b/projects.html
@@ -12,13 +12,25 @@
       <a class="big_screen_kos" href="#">Project</a>
       <a class="big_screen_kos" href="./background.html">Background</a>
       <a class="big_screen_kos" href="./objecives.html">CS50</a>
-      <a class="small_screen_kos" href="#">1</a>
-      <a class="small_screen_kos" href="./projects.html">2</a>
-      <a class="small_screen_kos" href="./background.html">3</a>
-      <a class="small_screen_kos" href="./objecives.html">4</a>
+      <a class="small_screen_kos" href="./index.html">&#9874;</a>
+      <a class="small_screen_kos" href="#">&#128526;</a>
+      <a class="small_screen_kos" href="./background.html">&#128366;</a>
+      <a class="small_screen_kos" href="./objecives.html">&#128387;</a>
     </div>
     <div id="main_frame_kos" class="">
-      <p>Finished story</p>
+      <p>Finished story:</p>
+      <ol>
+        <li>Graph analysis for melting furnace</li>
+        <li>web page ElectroKos.ru</li>
+        <li>VK bot for client ElectroKos.ru</li>
+        <li>Project modernistion for brevery packing dept.</li>
+        <li>and Other project</li>
+      </ol>
+      <p>If You interesting for other my work contact me !</p>
+      <div class="main_data_kos">
+        <img src="./img/prj1.jpeg" alt="prj1" width="60%" >
+        <img src="./img/prj2.jpeg" alt="prj2" width="60%" ">
+      </div>
     </div>
   </body>
 </html>
