All requirements checked

--- a/objecives.html
+++ b/objecives.html
@@ -17,7 +17,7 @@
       <a class="small_screen_kos" href="./background.html">&#128366;</a>
       <a class="small_screen_kos" href=".#">&#128387;</a>
     </div>
-    <div id="main_frame_kos" class="">
+    <div class="data_kos">
       <p>I will finish HarvardX CS50 to strengthen knowledge and receive certification.</p>
     </div>
   </body>
