--- a/background.html
+++ b/background.html
@@ -17,9 +17,48 @@
       <a class="small_screen_kos" href="#">&#128366;</a>
       <a class="small_screen_kos" href="./objecives.html">&#128387;</a>
     </div>
-    <div id="main_frame_kos" class="">
+    <div  class="data_kos">
       <p>I am a graduate of the Siberian Federal University.
 Specialty - electric drive and automation.</p>
+    </div>
+    <div class="data_kos">
+      <table>
+        <tr>
+          <th>Organisation</th>
+          <th>Field</th>
+          <th>Position</th>
+        </tr>
+        <tr>
+          <td>Own Style</td>
+          <td>Sale</td>
+          <td>Electric man</td>
+        </tr>
+        <tr>
+          <td>Norilsk Nikel</td>
+          <td>Maining roots</td>
+          <td>Electric man, Installation</td>
+        </tr>
+        <tr>
+          <td>Baltica Carlsberg</td>
+          <td>brewery</td>
+          <td>Eletronic</td>
+        </tr>
+        <tr>
+          <td>Schlumberger</td>
+          <td>Oil Petrolium</td>
+          <td>Maintainer</td>
+        </tr>
+        <tr>
+          <td>RusAl</td>
+          <td>metallurgy</td>
+          <td>Lead Engineer</td>
+        </tr>
+        <tr>
+          <td>Krones</td>
+          <td>Service Machine Prod</td>
+          <td>Service engineeer</td>
+        </tr>
+      </table>
     </div>
   </body>
 </html>
